refactor : Arrays.asList를 List.of로 변경 (#54)